manifests/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: bank-dev
spec:
  ClusterIP: None
  selector:
    app: blood-db
  ports:
  - port: 3306
    targetPort: 3306
