manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: bank-dev
spec:
  type: ClusterIP
  selector:
    app: blood-app
  ports:
  - port: 80
    targetPort: 80
