manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: bank-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: nginx #alb for AppLB
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app-svc
                port:
                  number: 80
